# DBI

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
simple_client1/: CMakeLists.txt  MSYS_build32.sh  README  build32.bat  build64.bat  client.c
simple_client2/: CMakeLists.txt  MSYS_build64.sh  README  build32.bat  build64.bat  client2.c
simple_client3/: CMakeLists.txt  README  build64.bat  client3.c
simple_client4_traceCacheMon/: CMakeLists.txt  build64.bat  client4.c
testsamples/: README.txt
testsamples/RelaunchMe/: RelaunchMe.sln
testsamples/RelaunchMe/RelaunchMe/: RelaunchMe.vcxproj  main.cpp
testsamples/RelaunchMe/RelaunchMe/Release/: RelaunchMe.exe.recipe  RelaunchMe.iobj  RelaunchMe.ipdb
testsamples/RelaunchMe/RelaunchMe/Release/RelaunchMe.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  RelaunchMe.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
testsamples/RelaunchMe/RelaunchMe/x64/Debug/: RelaunchMe.exe.recipe  RelaunchMe.ilk  vc143.idb
testsamples/RelaunchMe/RelaunchMe/x64/Debug/RelaunchMe.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  RelaunchMe.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
testsamples/RelaunchMe/RelaunchMe/x64/Release/: RelaunchMe.exe.recipe  RelaunchMe.iobj  RelaunchMe.ipdb
testsamples/RelaunchMe/RelaunchMe/x64/Release/RelaunchMe.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  RelaunchMe.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
testsamples/RelaunchMe/x64/Release/: RelaunchMe.exe.i64  api_calls.txt  trace_cli_win32.py  trace_shortproc.d
testsamples/VirtAllocCallCon/: VirtAllocCallCon.sln
testsamples/VirtAllocCallCon/VirtAllocCallCon/: VirtAllocCallCon.vcxproj  main.c
testsamples/anti_x/: anti_x.sln
testsamples/anti_x/anti_x/: anti_x.vcxproj  anti_x.vcxproj.filters  asm64.asm  main.cpp
testsamples/anti_x/anti_x/x64/Release/: anti_x.exe.recipe
testsamples/anti_x/anti_x/x64/Release/anti_x.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Masm.read.1u.tlog  Masm.write.1u.tlog  anti_x.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
testsamples/anti_x/x64/Release/: anti_x.exe.i64
testsamples/strDecode/: strDecode.sln
testsamples/strDecode/Release/: strDecode.exe.i64
testsamples/strDecode/strDecode/: main.cpp  strDecode.vcxproj
testsamples/strDecode/strDecode/Release/: strDecode.exe.recipe  strDecode.iobj  strDecode.ipdb
testsamples/strDecode/strDecode/Release/strDecode.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  strDecode.lastbuildstate
testsamples/strDecode/strDecode/x64/Release/: strDecode.exe.recipe  strDecode.iobj  strDecode.ipdb
testsamples/strDecode/strDecode/x64/Release/strDecode.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  strDecode.lastbuildstate
testsamples/strDecode/x64/Release/: strDecode.exe.i64
testsamples/threads/: threads.sln
testsamples/threads/threads/: threads.c  threads.vcxproj  threads.vcxproj.filters
testsamples/threads/threads/Release/: threads.exe.recipe  threads.iobj  threads.ipdb
testsamples/threads/threads/Release/threads.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  threads.lastbuildstate
testsamples/threads/threads/x64/Debug/: threads.exe.recipe  threads.ilk  vc143.idb
testsamples/threads/threads/x64/Debug/threads.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  threads.lastbuildstate
testsamples/threads/threads/x64/Release/: threads.exe.recipe  threads.iobj  threads.ipdb
testsamples/threads/threads/x64/Release/threads.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  threads.lastbuildstate
tracer-calltracer/: CMakeLists.txt  build32.bat  build64.bat  compile_flags.txt  log_anti_x-25-09-24_19-01-34.csv  log_strDecode-25-09-24_19-01-02.csv  run_tracer32.sh  run_tracer64.sh  tracer.c
tracer-memdump/: CMakeLists.txt  MSYS_build32.sh  README.txt  build32.bat  decode_strings.py  memdump.c  run_tracer32-bin.sh  run_tracer32.sh  run_tracer64-bin.sh  run_tracer64.sh
tracer-strdump/: CMakeLists.txt  README.txt  build64.bat  decode_strings.py  run_tracer32.sh  run_tracer64.sh  strdump.c
